<resources>
    <string name="app_name">Covid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"><b>COVID-19 Tracker</b></string>
    <string name="nav_header_subtitle">0.0.1-beta</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_saved">Saved Countries</string>
    <string name="menu_volunteer">Volunteer</string>
    <string name="menu_about">About</string>

    <string name="home_second">Home Second</string>
    <string name="total_confirmed_cases">Total Cases</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_cases_today">Cases Today</string>
    <string name="total_deaths_today">Deaths Today</string>
    <string name="total_unresolved">Unresolved</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="total_active">Total Active</string>
    <string name="total_serious">Total Serious</string>
    <string name="warning"><b><u>Notice! </u></b>Income generated by the app from Ads (advertisements) is <b>(50%)</b> donated to charity to fight the novel corona virus.</string>
    <string name="total_recovery_today">Recovery Today</string>
    <string name="menu_all_countries">All Countries</string>
    <string name="country_detail">County Detail</string>
    <string name="cases_that_day">Cases That Day</string>
    <string name="deaths_that_day">Deaths That Day</string>
    <string name="menu_select">Select your Country</string>
    <string name="add_countries">Add Countries</string>
    <string name="action_about">About</string>
    <string name="version_slang">0.0.1 \"nemA\"</string>
    <string name="app_description">Named after the virus itself \"Covid\" is yet another app for tracking the ongoing global pandemic AKA COIVD-19 (CoronaVirus) that is believed to have originated from Wuhan, China.</string>
    <string name="telegram">Join our telegram channel</string>
    <string name="final_words">Data is provided by thevirustracker.com. The app is open source, you can grab the code from our telegram channel and in case the app makes considerable amount of money it\'ll be donated to charity.</string>
</resources>
