<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/tilde_bold"
        android:text="20/03/2020"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date">

            <View
                android:id="@+id/ind_cases"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="16dp"
                android:background="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/tot_cases"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tot_cases" />

            <TextView
                android:id="@+id/tot_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/eczar_medium"
                android:text="200"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toEndOf="@+id/ind_cases"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_cases"
                android:fontFamily="@font/tilde_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/tot_cases"
                app:layout_constraintStart_toStartOf="@+id/tot_cases"
                app:layout_constraintTop_toBottomOf="@+id/tot_cases" />

            <!--_________________________________________________________-->

            <View
                android:id="@+id/ind_death"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="16dp"
                android:background="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/tot_deaths"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tot_deaths" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tot_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/eczar_medium"
                android:text="9900"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toEndOf="@+id/ind_death"
                app:layout_constraintTop_toBottomOf="@+id/label_cases" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tilde_bold"
                android:text="@string/total_deaths"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/tot_deaths"
                app:layout_constraintStart_toStartOf="@+id/tot_deaths"
                app:layout_constraintTop_toBottomOf="@+id/tot_deaths" />

            <!--___________________________________________________-->

            <View
                android:id="@+id/ind_recovery"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="16dp"
                android:background="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/tot_recovery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tot_recovery" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tot_recovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/eczar_medium"
                android:text="600"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toEndOf="@+id/ind_recovery"
                app:layout_constraintTop_toBottomOf="@+id/label_deaths" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_recovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/tilde_bold"
                android:text="@string/total_recovered"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toEndOf="@+id/ind_recovery"
                app:layout_constraintTop_toBottomOf="@+id/tot_recovery" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/ind_daily_case"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="24dp"
                android:background="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/tot_daily_cases"
                app:layout_constraintStart_toEndOf="@+id/divider3"
                app:layout_constraintTop_toTopOf="@+id/tot_daily_cases" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tot_daily_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/eczar_medium"
                android:text="200"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ind_daily_case"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_daily_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cases_that_day"
                android:fontFamily="@font/tilde_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/tot_daily_cases"
                app:layout_constraintStart_toStartOf="@+id/tot_daily_cases"
                app:layout_constraintTop_toBottomOf="@+id/tot_daily_cases" />

            <View
                android:id="@+id/ind_daily_deaths"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="24dp"
                android:background="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/tot_daily_deaths"
                app:layout_constraintStart_toEndOf="@+id/divider3"
                app:layout_constraintTop_toTopOf="@+id/tot_daily_deaths" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tot_daily_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/eczar_medium"
                android:text="200"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ind_daily_deaths"
                app:layout_constraintTop_toBottomOf="@+id/label_daily_cases" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/deaths_that_day"
                android:fontFamily="@font/tilde_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/tot_daily_deaths"
                app:layout_constraintStart_toStartOf="@+id/tot_daily_deaths"
                app:layout_constraintTop_toBottomOf="@+id/tot_daily_deaths" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>